[package]
authors = ['Bandot Developers']
edition = '2018'
name = 'pallet-exchange'
version = '0.1.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
frame-support = {default-features = false, version = '2.0.0'}
frame-system = {default-features = false, version = '2.0.0'}
orml-tokens = {path = "../../orml/tokens", default-features = false}
orml-traits = {path = "../../orml/traits", default-features = false}
orml-utilities = {path = "../../orml/utilities", default-features = false}
primitives = {package = "pallet-primitives", path = "../primitives", default-features = false}
serde = {version = "1.0.101", features = ['derive'], optional = true}
sp-runtime = {default-features = false, version = '2.0.0'}
sp-std = {default-features = false, version = '2.0.0'}

[dev-dependencies]
orml-currencies = {path = "../../orml/currencies", default-features = false}
sp-core = {default-features = false, version = '2.0.0'}
sp-io = {default-features = false, version = '2.0.0'}
sp-runtime = {default-features = false, version = '2.0.0'}

[features]
default = ['std']
std = [
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  "orml-traits/std",
  "orml-tokens/std",
  "orml-utilities/std",
  "serde",
  "primitives/std",
]
