[package]
authors = ['Bandot Developers']
edition = '2018'
name = 'pallet-primitives'
version = '0.1.1'

[dependencies]
codec = {package = "parity-scale-codec", version = "1.3.4", default-features = false}
serde = {version = "1.0.101", optional = true}
sp-runtime = {default-features = false, version = '2.0.0'}
sp-std = {default-features = false, version = "2.0.0"}

[features]
default = ["std"]
std = [
  "sp-std/std",
  "codec/std",
  "serde",
  "sp-runtime/std",
]
